feat: implementado el endpoint getSubscriptionById
