# src/main/resources/swagger.yaml
@@ -111,6 +111,27 @@ paths:
           $ref: '#/components/responses/UnexpectedError'
       tags:
         - subscriptions
+  /subscriptions/{subscriptionId}:
+    get:
+      summary: Obtener suscripción por ID
+      operationId: getSubscriptionById
+      parameters:
+        - $ref: '#/components/parameters/subscriptionIdPathParam'
+      responses:
+        '200':
+          $ref: '#/components/responses/SubscriptionResponse'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/UnexpectedError'
+      tags:
+        - subscriptions
 components:
   requestBodies:
     AuthenticationRequestBody:
@@ -168,6 +189,13 @@ components:
         $ref: '#/components/schemas/sortByQueryParam'
     userIdPathParam:
       name: userId
+      in: path
+      required: true
+      schema:
+        type: integer
+        format: int64
+    subscriptionIdPathParam:
+      name: subscriptionId
       in: path
       required: true
       schema:
